--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             </ul>
 
-            <i class="fa-regular fa-bars" id="hamburger-menu" style="color: #e6e7eb;"></i>
+            <i class="fa-solid fa-bars" id="hamburger-menu" style="color: #e6e7eb;"></i>
 
 
 
