Add new functionalities

--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>RS Studio</title>
 </head>
 
 <body>
     <header id="logo">
         <div class="logo-setting">
-            <img src="images/logo.png" alt="" width="400px" height="400px">
+            <img src="images/logo.png" alt="" width="400px" height="400px" class="brandimage">
         </div>
 
         <nav class="nav-ref">
 
             <ul class="myList">
+                <img src="images/logo.png" alt="" width="200px" >
+
                 <li class="nav-list"><a href="#logo" class="a-nav">Home</a></li>
                 <li class="nav-list"><a href="#About" class="a-nav">About</a></li>
                 <li class="nav-list"><a href="#services" class="a-nav">Services</a></li>
