--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav-ref">
 
             <ul class="myList">
-                <img src="images/logo.png" alt="" width="200px" >
+                <img src="images/logo.png" alt="" width="200px" class="hideme">
 
                 <li class="nav-list"><a href="#logo" class="a-nav">Home</a></li>
                 <li class="nav-list"><a href="#About" class="a-nav">About</a></li>
