--- a/index.html
+++ b/index.html
@@ -1,252 +1,216 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>RS Studio</title>
+    <title>The Photographic Tapestry</title>
 </head>
-
 <body>
     <header id="logo">
         <div class="logo-setting">
-            <img src="images/logo.png" alt="" width="400px" height="400px" class="brandimage">
+            <img src="images/bglogo.png" alt="" width="430px" height="100px" class="brandimage">
         </div>
-
         <nav class="nav-ref">
-
             <ul class="myList">
                 <img src="images/logo.png" alt="" width="200px" class="hideme">
-
                 <li class="nav-list"><a href="#logo" class="a-nav">Home</a></li>
                 <li class="nav-list"><a href="#About" class="a-nav">About</a></li>
                 <li class="nav-list"><a href="#services" class="a-nav">Services</a></li>
                 <li class="nav-list"><a href="#contact" class="a-nav">Contact</a></li>
-
             </ul>
-
             <i class="fa-solid fa-bars" id="hamburger-menu" style="color: #e6e7eb;"></i>
-
-
-
         </nav>
-
-
-
     </header>
+    <br><br>
     <section>
         <div class="slideshow-container">
-
-
-
             <div class="mySlides fade">
-                <div class="numbertext">1 / 4</div>
-                <img src="images/yami.jpg" class="carousel-img">
+                <div class="numbertext">1 / 6</div>
+                <img src="images/camera.jpg" class="carousel-img">
                 <div class="text">
-                    <h1 class="title">Yami Gautam</h1>
-                    <p class="subtitle">find best photos of the actress</p>
-                    <button class="btn" onclick='openMoreDetails("Yami Gautam")'>View more details</button>
+                    <button class="bt"><h1 class="title">Captured Essence</h1></button>
+                    <p class="subtitle">find best photos here</p>
+                    <button class="btn" onclick='openMoreDetails("photography scenes")'>View more details</button>
                 </div>
             </div>
-
             <div class="mySlides fade">
-                <div class="numbertext">2 / 4</div>
-                <img src="images/shraddha.jpg" class="carousel-img">
+                <div class="numbertext">2 / 6</div>
+                <img src="images/green2.jpg" class="carousel-img">
                 <div class="text">
-                    <h1 class="title">Shraddha kapoor</h1>
-                    <p class="subtitle">you can reach to every photo of your favourite actress</p>
-                    <button class="btn" onclick='openMoreDetails("Shraddha Kapoor")'>View more details</button>
+                    <button class="bt"><h1 class="title">Scenic Beauty</h1></button>
+                    <p class="subtitle">you can reach to every photo of your favourite criteria</p>
+                    <button class="btn" onclick='openMoreDetails("Nature beautiful")'>View more details</button>
                 </div>
             </div>
-
             <div class="mySlides fade">
-                <div class="numbertext">3 / 4</div>
-                <img src="images/kritisanon.jpg" class="carousel-img">
+                <div class="numbertext">3 / 6</div>
+                <img src="images/wed1.jpg" class="carousel-img">
                 <div class="text">
-                    <h1 class="title">Kriti Sanon</h1>
+                    <button class="bt"><h1 class="title">Beautiful moments of life</h1></button>
                     <p class="subtitle">you can also follow us on linkedin and instagram</p>
-                    <button class="btn" onclick='openMoreDetails("kriti sanon")'>View more details</button>
+                    <button class="btn" onclick='openMoreDetails("indian wedding photos")'>View more details</button>
                 </div>
             </div>
             <div class="mySlides fade">
-                <div class="numbertext">4 / 4</div>
-                <img src="images/nidhi shah.jpg" class="carousel-img">
+                <div class="numbertext">4 / 6</div>
+                <img src="images/family.jpg" class="carousel-img">
                 <div class="text">
-                    <h1 class="title">Nidhi Shah</h1>
-                    <p class="subtitle">Anupma actress kinju baby</p>
-                    <button class="btn" onclick='openMoreDetails("nidhi shah")'>View more details</button>
+                    <button class="bt"><h1 class="title">Precious pics with precious stars</h1></button>
+                    <p class="subtitle">Dear Family</p>
+                    <button class="btn" onclick='openMoreDetails("family photography")'>View more details</button>
                 </div>
             </div>
-
-
+            <div class="mySlides fade">
+                <div class="numbertext">5 / 6</div>
+                <img src="images/bday.jpg" class="carousel-img">
+                <div class="text">
+                    <button class="bt"><h1 class="title">Embracing moments</h1></button>
+                    <p class="subtitle">Happy Birthday Champ!</p>
+                    <button class="btn" onclick='openMoreDetails("birthday celebrations")'>View more details</button>
+                </div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">6 / 6</div>
+                <img src="images/taj.jpg" class="carousel-img">
+                <div class="text">
+                    <button class="bt"><h4 class="title">Cultural Significance</h4></button>
+                    <p class="subtitle">Our heritage, our pride</p>
+                    <button class="btn" onclick='openMoreDetails("Monuments")'>View more details</button>
+                </div>
+            </div>
             <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
-
         <!-- The dots/circles -->
         <div style="text-align:center">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
         </div>
-
     </section>
 
     <section id="About">
-
         <div class="flex-container photo">
-            <img src="images/rishi-2.jpg" class="image" alt="">
+            <video width="100%" height="100%" controls autoplay="true" loop>
+                <source src="images/To.mp4" type="video/mp4">
+            </video>
         </div>
         <div class="flex-container description">
-
-            <h1 class="heading">Rishi Saraswat</h1>
-
-            <p class="paragraph">My name is rishi saraswat, my age is 21 years, im a student in polythechnic state
-                uttarpradesh.I am so
-                obsessed with someone who has a high science and humble, I hope to have a heart like that. I take hold
-                of my life motto is Every successful person must have a failure. Do not be afraid to fail Because
-                failure is a part of success. I am a full time photographer who has been in the business for many years
-                now. Before ever shooting professionally I have always found light and people to be very interesting
-                subjects that inspires me to no end. I am often fascinated with exploring the creative possibilities
-                with my subjects and relish in the discovery of undiscovered possibility.</p>
-            <img src="images\Pink and Black Modern Initials Logo Design-modified.png" class="logo-img" alt="">
-            <img src="images\Black Yellow White Modern Studio Photo Logo.png" class="logo-img" alt="">
-
+            <marquee direction="left" scrollamount="20"><h1 class="heading">The Photographic Tapestry</h1></marquee>
+            <p class="paragraph">
+                Welcome to Tapestry Photography, where each frame unfolds a unique story. 
+                Our passion for capturing moments transcends mere images; 
+                it weaves a visual tapestry that resonates with emotions. 
+                Explore the artistry of our lenses, revealing the intricate 
+                threads of life through vibrant colors and compelling compositions. 
+                Immerse yourself in a world where each photograph is a brushstroke 
+                on the canvas of time, portraying the beauty of fleeting instants. 
+                At Tapestry Photography, we believe in the power of visual narratives, 
+                where every click is an invitation to share the profound and 
+                the ephemeral. Join us on this visual journey, where stories are told, 
+                memories are crafted, and moments are forever encapsulated.
+            </p>
         </div>
-
-
-
     </section>
 
     <section id="services">
-
         <div class="card ">
-
             <div class="gradient"> </div>
             <div class="info">
-
                 <i class="fa-solid fa-camera-retro fa-2xl fontawesome"></i>
-                <h1>Wedding</h1>
+                <h1>Photographers & Services</h1>
                 <ul style="list-style:none; ">
                     <li>Certified Master Photographer</li>
-                    <li>Certified Additional Photographer</li>
                     <li>Approximately 100 photos per hour</li>
-                    <li>Color correction on all photos</li>
+                    <li>Color Correction</li>
                     <li>Hand Crafted Photo-albums</li>
                     <li>10 Day Turnaround Time</li>
                     <li>Online Private Gallery</li>
                 </ul>
+                <br>
                 <button class="btn btn-i"><a href="#contact" class="service-btn">Contact</a></button>
             </div>
-
-
         </div>
-
         <div class="card ">
-
             <div class="gradient"> </div>
             <div class="info">
                 <i class="fa-solid fa-image-portrait fa-2xl fontawesome"></i>
-                <h1>Potrait</h1>
+                <h1>Multifaceted Exploration</h1>
                 <ul style="list-style:none; ">
-                    <li>Certified Master Photographer</li>
-                    <li>Certified Additional Photographer</li>
-                    <li>Approximately 100 photos per hour</li>
-                    <li>Color correction on all photos</li>
-                    <li>Hand Crafted Photo-albums</li>
-                    <li>10 Day Turnaround Time</li>
-                    <li>Online Private Gallery</li>
+                    <li>Wedding & Events Photography</li>
+                    <li>Natural & Historical Photography</li>
+                    <li>Still life & Potraits Photography</li>
+                    <li>Travel & Exploration Photography</li>
+                    <li>Food and Fashion Photography</li>
                 </ul>
                 <button class="btn  btn-i"><a href="#contact" class="service-btn">Contact</a></button>
             </div>
-
-
-
         </div>
-
         <div class="card ">
-
             <div class="gradient"> </div>
             <div class="info">
                 <i class="fa-solid fa-book fa-2xl fontawesome"></i>
-                <h1>Wedding films</h1>
+                <h1>Customization</h1>
                 <ul style="list-style:none; ">
-                    <li>Certified Master Photographer</li>
-                    <li>Certified Additional Photographer</li>
-                    <li>Approximately 100 photos per hour</li>
-                    <li>Color correction on all photos</li>
-                    <li>Hand Crafted Photo-albums</li>
-                    <li>10 Day Turnaround Time</li>
-                    <li>Online Private Gallery</li>
+                    <li>Customized Photoshoot Packages</li>
+                    <li>Unique Styling & Design</li>
+                    <li>Personal Branding Phtotgraphy</li>
+                    <li>Location Specific Capture</li>
+                    <li>Customised Albums & Photo Books</li>
+                    <li>Appealing Quality</li>
+                    <li>Bespoke Editing and Retouching of photos</li>
                 </ul>
+                <br>
                 <button class="btn  btn-i"><a href="#contact" class="service-btn">Contact</a></button>
             </div>
-
         </div>
-
     </section>
-    <section id="contact">
 
+    <section id="contact">
         <div class="contact-info sign-in">
             <ul style="list-style-type: none;">
-                <li class="contact-item"><i class="fa-solid fa-location-dot"></i>Sec-9,Awas vikas
-                    colony,sikandra,agra-282207</li>
-                <li class="contact-item"><i class="fa-regular fa-envelope"></i>Rishi123@gmail.com</li>
-                <li class="contact-item"><i class="fa-solid fa-phone"></i>7983732864</li>
-                <li class="contact-item"><i class="fa-solid fa-clock"></i>Mon-fri 9:00 AM TO 5:00 AM</li>
-
+                <li class="contact-item"><i class="fa-solid fa-location-dot"></i>
+                    Sec-5, Awas Vikas Colony, Sikandra, Agra-282207</li>
+                <li class="contact-item"><i class="fa-regular fa-envelope"></i>
+                    phtographictapestry@gmail.com</li>
+                <li class="contact-item"><i class="fa-solid fa-phone"></i>
+                    7983732864</li>
+                <li class="contact-item"><i class="fa-solid fa-clock"></i>
+                    Mon-Fri 9:00 AM TO 5:00 PM</li>
             </ul>
-
-
         </div>
-
         <div class="contact-form sign-in">
-
-
             <h2>Contact Form</h2>
-
             <form action="">
                 <input type="text" class="inp-field" placeholder="Name">
                 <input type="text" placeholder="Email" class="inp-field">
                 <textarea name="msg" id="text-area" cols="30" rows="10" placeholder="Enter your message"></textarea>
                 <button class="btn btn-1">submit</button>
             </form>
-
-
-
-
-
         </div>
-
-
-
     </section>
 
     <footer class="last-section">
         <p>
-            © Copyright 2023 Made with ❤️ By Sajal
-
+            © Copyright 2023 Made with ❤️ By Shiv, Sajal, Prince, Saumya
         </p>
         <span>
-
             <i class="fa-brands fa-facebook-f icon fa-xl"> </i>
             <i class="fa-brands fa-twitter icon fa-xl"></i>
             <i class="fa-brands fa-instagram icon fa-xl"></i>
             <i class="fa-brands fa-whatsapp icon fa-xl"></i>
         </span>
-
     </footer>
 
-
-
-
-    <script src="https://kit.fontawesome.com/a7726eaf13.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a7726eaf13.js" crossorigin="anonymous">
+    </script>
     <script src="index.js">
     </script>
-
 </body>
-
 </html>
